<resources>
    <string name="app_name">Petagram</string>
    <string name="pnombre">nombre</string>
    <string name="praiting">0</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_acerca">Acerca de</string>


    <!--Actividad Acerca De-->
    <string name="bio_autor">Hola! Soy Francisco Gonzalez, me gusta la programación. Soy estudiante de Ingeniería en Sistemas. Saludos </string>
    <string name="name_autor">Francisco Gonzalez</string>

    <!--Actividad Contacto-->
    <string name="name_contacto">Nombre Completo</string>
    <string name="email">Correo Electronico (sólo GMAIL)</string>
    <string name="password">Ingresa contraseñia</string>
    <string name="texto_mensaje">Ingrese su mensaje...</string>


    <!-- Boton -->
    <string name="boton_enviar">Enviar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="my_dog">Goffy</string>

</resources>
